--- a/config_host/config_vclplug.h.in
+++ b/config_host/config_vclplug.h.in
@@ -20,6 +20,7 @@ Settings about which desktops have support enabled.
 #define ENABLE_GTK3_KDE5 0
 #define ENABLE_HEADLESS 0
 #define ENABLE_KF5 0
+#define ENABLE_KF6 0
 #define ENABLE_QT5 0
 #define ENABLE_QT6 0
 
