--- a/distro-configs/LibreOfficeCoverity.conf
+++ b/distro-configs/LibreOfficeCoverity.conf
@@ -11,6 +11,8 @@
 --with-system-libs
 --with-system-headers
 --without-system-cppunit
+--without-system-dragonbox
+--without-system-frozen
 --without-system-libfixmath
 --enable-dbus
 --enable-extension-integration
