Flatpak build needs external/frozen
Change-Id: I701bf6999d29b54438c7cb47f73453aae3fbb457
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154246
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit cd9ea34fbe89ac262069e6990cb8c0aa8ac55339)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154258
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>

--- a/solenv/flatpak-manifest.in
+++ b/solenv/flatpak-manifest.in
@@ -675,6 +675,13 @@
                     "dest-filename": "@ZXING_TARBALL@"
                 },
                 {
+                    "url": "https://dev-www.libreoffice.org/src/@FROZEN_TARBALL@",
+                    "sha256": "@FROZEN_SHA256SUM@",
+                    "type": "file",
+                    "dest": "external/tarballs",
+                    "dest-filename": "@FROZEN_TARBALL@"
+                },
+                {
                     "url": "https://dev-www.libreoffice.org/extern/@OPENSYMBOL_TTF@",
                     "sha256": "@OPENSYMBOL_SHA256SUM@",
                     "type": "file",
