--- a/distro-configs/LibreOfficeFlatpak.conf
+++ b/distro-configs/LibreOfficeFlatpak.conf
@@ -20,6 +20,7 @@
 --without-system-cppunit
 --without-system-dragonbox
 --without-system-firebird
+--without-system-frozen
 --without-system-glm
 --without-system-gpgmepp
 --without-system-jfreereport
