Opt out of using global menu on old OS version
Change-Id: Ic1700261e31b4cf8cfed7fe4eb4dac4856afe93e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154476
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>

--- a/sysui/desktop/menus/math.desktop
+++ b/sysui/desktop/menus/math.desktop
@@ -22,7 +22,7 @@ NoDisplay=false
 Icon=math
 Type=Application
 Categories=Office;Education;Science;Math;X-Red-Hat-Base;X-MandrivaLinux-Office-Other;
-Exec=${UNIXBASISROOTNAME} --math %%FILE%%
+Exec=env UBUNTU_MENUPROXY=0 ${UNIXBASISROOTNAME} --math %%FILE%%
 MimeType=application/vnd.oasis.opendocument.formula;application/vnd.sun.xml.math;application/vnd.oasis.opendocument.formula-template;text/mathml;application/mathml+xml;
 Name=%PRODUCTNAME Math
 GenericName=Formula Editor
